# python2021

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  ScreamQueens.cbp  cmake_install.cmake  main.cpp
auxiliary/: parse_string.h
database/: CMakeLists.txt  database.cpp  database.h
database/filedatabase/: CMakeLists.txt  filedatabase.cpp  filedatabase.h
database/filedatabase/data/: antagonists  lol  protagonists
exceptions/: CMakeLists.txt  exceptions.h
game/: CMakeLists.txt  game.cpp  game.h
person/: CMakeLists.txt  factories.cpp  factories.h  game_mechanics.h  person.cpp  person.h  teams.cpp  teams.h
phrases/: CMakeLists.txt  phrases.cpp  phrases.h
settings/: settings.cpp  settings.h
stats/: CMakeLists.txt  stats.cpp  stats.h
testperson/: main.cpp
tests/: person_tests.cpp  stats_tests.cpp
